# nannou-practice

./: Cargo.toml  README.md
example1/: Cargo.toml
example1/src/: main.rs
example2/: Cargo.toml
example2/src/: main.rs
example3/: Cargo.toml
example3/src/: main.rs
example4/: Cargo.toml
font/: .gitignore  Cargo.toml  Makefile
font/src/: main.rs
nalgebra/: Cargo.toml
nalgebra/src/: main.rs
simple_3d_rotation/: Cargo.toml
simple_3d_rotation/src/: main.rs
simple_shader/: Cargo.toml  Makefile
simple_shader/src/: main.rs
simple_shader/src/shaders/: blur.frag  blur.frag.spv  blur.vert  blur.vert.spv  frag.spv  shader.frag.spv  shader.vert  vert.spv
stripes/: Cargo.toml
stripes/src/: main.rs
