[package]
name = "font"
version = "0.1.0"
authors = ["Hiroaki Yutani <yutani.ini@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rapier2d = { version = "*", features = [ "simd-stable", "parallel" ] }
nannou = "0.14.1"
rusttype = "0.9.2"
lyon = "0.16.2"
