[package]
name = "simple_shader"
version = "0.1.0"
authors = ["Hiroaki Yutani <yutani.ini@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = { git = "https://github.com/nannou-org/nannou" }
lyon = { git = "https://github.com/nical/lyon" }
bytemuck = "1.2.0"
